[package]
name = "multicall-example"
version = "0.1.0"
authors = ["Gokhan Simsek <g.simsek@paralect.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.25", features = ["full"] }
# Use ether-rs version which uses tokio 0.2
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "7eec705" } 
serde_json = "1.0.64"